; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nfsd/extr_nfs4idmap.c_ent_alloc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nfsd/extr_nfs4idmap.c_ent_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_head = type { i32 }
%struct.ent = type { %struct.cache_head }

@GFP_KERNEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.cache_head* ()* @ent_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.cache_head* @ent_alloc() #0 {
  %1 = alloca %struct.cache_head*, align 8
  %2 = alloca %struct.ent*, align 8
  %3 = load i32, i32* @GFP_KERNEL, align 4
  %4 = call %struct.ent* @kmalloc(i32 4, i32 %3)
  store %struct.ent* %4, %struct.ent** %2, align 8
  %5 = load %struct.ent*, %struct.ent** %2, align 8
  %6 = icmp ne %struct.ent* %5, null
  br i1 %6, label %7, label %10

7:                                                ; preds = %0
  %8 = load %struct.ent*, %struct.ent** %2, align 8
  %9 = getelementptr inbounds %struct.ent, %struct.ent* %8, i32 0, i32 0
  store %struct.cache_head* %9, %struct.cache_head** %1, align 8
  br label %11

10:                                               ; preds = %0
  store %struct.cache_head* null, %struct.cache_head** %1, align 8
  br label %11

11:                                               ; preds = %10, %7
  %12 = load %struct.cache_head*, %struct.cache_head** %1, align 8
  ret %struct.cache_head* %12
}

declare dso_local %struct.ent* @kmalloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
